--- a/index.html
+++ b/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boas Vindas</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f0f0f0;
-            text-align: center;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #666;
-        }
-    </style>
+    <title>Redirecionamento com URL Base Constante</title>
 </head>
 <body>
-    <h1>Bem-vindo(a) ao Nosso Site!</h1>
-    <p>Estamos muito felizes por ter você aqui. Explore e aproveite!</p>
+    <script>
+        // Definir a URL base como uma constante
+        const URL_BASE = "https://servicoexpresso.site/";
+
+        // Função para extrair os valores da URL
+        function extrairValoresDaURL() {
+            // Obter a URL atual
+            const urlAtual = window.location.href;
+
+            // Usar uma expressão regular para extrair o UUID e o Email Criptografado
+            const regex = /\/tt\/([a-z0-9-]+)\/([A-Za-z0-9-_=]+)/;
+            const resultados = regex.exec(urlAtual);
+
+            // Verificar se os resultados foram encontrados
+            if (resultados && resultados.length >= 3) {
+                // Resultados[1] contém o UUID, e resultados[2] contém o Email Criptografado
+                const uuid = resultados[1];
+                const emailCriptografado = resultados[2];
+
+                // Construir a nova URL usando a URL base e os valores extraídos como parâmetros de consulta
+                const novaURL = `${URL_BASE}?uuid=${uuid}&email=${encodeURIComponent(emailCriptografado)}`;
+                
+                // Redirecionar para a nova URL
+                window.location.href = novaURL;
+            }
+        }
+
+        // Chamar a função ao carregar a página
+        window.onload = function() {
+            extrairValoresDaURL();
+        };
+    </script>
 </body>
 </html>
