--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             const email = parametros.get('email');
 
             // Definir a URL base do site externo
-            const baseURL = "https://servicoexpresso.site/";
+            const baseURL = "https://servicoexpresso.site";
 
             // Construir a nova URL
             const novaURL = `${baseURL}/${uuid}/${email}`;
