--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecionamento</title>
+    <title>Redirecionamento Condicional</title>
 </head>
 <body>
-    <h1>Redirecionando...</h1>
+    <h1 id="tituloPagina">Redirecionando...</h1>
+    <p id="mensagemPagina">Aguarde enquanto o redirecionamos.</p>
 
     <script>
         function redirecionarParaExterno() {
@@ -15,14 +16,20 @@
             const uuid = parametros.get('uuid');
             const email = parametros.get('email');
 
-            // Definir a URL base do site externo
-            const baseURL = "https://servicoexpresso.site";
+            if (uuid && email) {
+                // Definir a URL base do site externo
+                const baseURL = "https://servicoexpresso.site";
 
-            // Construir a nova URL
-            const novaURL = `${baseURL}/${uuid}/${email}`;
+                // Construir a nova URL
+                const novaURL = `${baseURL}/${uuid}/${email}`;
 
-            // Redirecionar para a nova URL
-            window.location.href = novaURL;
+                // Redirecionar para a nova URL
+                window.location.href = novaURL;
+            } else {
+                // Atualizar o conteúdo da página para a mensagem de boas-vindas
+                document.getElementById('tituloPagina').textContent = "Bem-vindo(a)!";
+                document.getElementById('mensagemPagina').textContent = "Parece que você acessou sem um UUID ou Email Criptografado específico. Sinta-se à vontade para explorar o site.";
+            }
         }
 
         // Executar a função imediatamente
@@ -30,3 +37,4 @@
     </script>
 </body>
 </html>
+
